GDB-6868 Cluster UI improvements  - aligned delete and settings buttons  - fixed node icons center position on FF  - fixed different cursor in FF. set cursor to pointer for all browsers as the nodes are clickable  - added clarification on cluster create dialog  - set Signature option as default when adding remote locations  - added break-word to endpoints in node tooltip as they might be big  - fixed problem with remote locations not visible if create window is reopened or adding a location errors out

--- a/src/css/clustermanagement.css
+++ b/src/css/clustermanagement.css
@@ -213,9 +213,7 @@ line.link {
 }
 
 .node {
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
-  cursor: grab;
+  cursor: pointer;
   fill: #97999C;
   stroke: black;
 }
@@ -237,7 +235,7 @@ text.node-icon {
   fill: rgba(255, 255, 255, 0.5);
   font-size: 40px;
   text-anchor: middle;
-  alignment-baseline: middle;
+  dominant-baseline: central;
 }
 
 .node.dragged {
@@ -419,6 +417,7 @@ div.nodetooltip {
 .locations-list {
   border: 1px solid;
   min-height:8rem;
+  max-height: 18rem;
 }
 
 .location-item {
@@ -448,4 +447,8 @@ div.nodetooltip {
       left center;
   height: 25px;
   width: 25px;
+}
+
+.action-buttons {
+  flex-grow: 1;
 }
